@@ -50,7 +50,7 @@ class SnmpV1MessageProcessingModel(AbstractMessageProcessingModel):
         if not contextName:
             contextName = ''
 
-        debug.logger & debug.flagMP and debug.logger('prepareOutgoingMessage: using contextEngineId %s contextName %s' % (contextEngineId, contextName))
+        debug.logger & debug.flagMP and debug.logger('prepareOutgoingMessage: using contextEngineId %s contextName %s' % (repr(contextEngineId), contextName))
 
         # rfc3412: 7.1.6
         scopedPDU = ( contextEngineId, contextName, pdu )
@@ -162,7 +162,7 @@ class SnmpV1MessageProcessingModel(AbstractMessageProcessingModel):
         # rfc3412: 7.1.6
         scopedPDU = ( contextEngineId, contextName, pdu )
 
-        debug.logger & debug.flagMP and debug.logger('prepareResponseMessage: using contextEngineId %s contextName %s' % (contextEngineId, contextName))
+        debug.logger & debug.flagMP and debug.logger('prepareResponseMessage: using contextEngineId %s contextName %s' % (repr(contextEngineId), contextName))
         
         msg = self._snmpMsgSpec.clone()
         msg.setComponentByPosition(0, messageProcessingModel)
@@ -263,7 +263,7 @@ class SnmpV1MessageProcessingModel(AbstractMessageProcessingModel):
             msg
             )
 
-        debug.logger & debug.flagMP and debug.logger('prepareDataElements: SM returned securityEngineID %s securityName %s' % (securityEngineID, securityName))
+        debug.logger & debug.flagMP and debug.logger('prepareDataElements: SM returned securityEngineID %s securityName %s' % (repr(securityEngineID), securityName))
 
         # rfc3412: 7.2.6a --> noop
 
